<resources>
    <string name="app_name">authorization</string>
    <string name="email_not_empty">Email не может быть пустым</string>
    <string name="incorrect_email">Неверный Email</string>
    <string name="already_registered_email">Email уже зарегистрирован</string>
    <string name="pass_not_empty">Пароль не может быть пустым</string>
    <string name="pass_do_not_match">Пароли не совпадают</string>
    <string name="pass_incorrect_reg">Пароль не соответствует требованиям</string>
    <string name="successfully_reg">Пользователь успешно зарегистрирован</string>
    <string name="email_do_not_register">Такой Email не зарегистрирован</string>
    <string name="incorrect_pass">Неверный пароль</string>
    <string name="good_job">GOOD JOB, MY FRIEND</string>
    <string name="registration">Регистрация</string>
    <string name="singin">Вход</string>
    <string name="sing_in">Войти</string>
    <string name="pass_enter">Введите пароль</string>
    <string name="pass">Пароль:</string>
    <string name="email_enter">Введите Email</string>
    <string name="email">Email:</string>
    <string name="repeat_pass">Повторите пароль</string>
    <string name="reg">Зарегистрироваться</string>
    <string name="pass_prompt">*Пароль должен содержать \n от 8 до 16 символов</string>
</resources>