<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthorizationFragment">

    <Button
        android:id="@+id/btSingin"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="40dp"
        android:text="@string/sing_in" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="185dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/pass_enter"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/tvPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="40dp"
        android:text="@string/pass"
        android:textColor="#673AB7"
        android:textSize="12sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="115dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/email_enter"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="40dp"
        android:text="@string/email"
        android:textColor="#673AB7"
        android:textSize="12sp"
        android:textStyle="bold" />

</FrameLayout>